[package]
name = "serum-twap"
version = "0.1.0"
authors = ["Conner <ConnerNGallagher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
error-chain = "0.12"